fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ a{
 
     }
     .social-img{
-        width: 400px;
+        width: 360px;
     }
     .social-left {
         padding: 30px 0px;
